--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 theme: jekyll-theme-cayman
 google_analytics: UA-151241150-1
+title: ISTD Student Board
+description: Student Initiatives and Resources
